--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.commit451.betterviewdraghelper.sample.AllowsForDragFrameLayout
+<com.commit451.translationviewdraghelper.sample.AllowsForDragFrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/root"
     android:layout_width="match_parent"
@@ -11,4 +11,4 @@
         android:layout_height="100dp"
         android:background="#ff0000" />
 
-</com.commit451.betterviewdraghelper.sample.AllowsForDragFrameLayout>
+</com.commit451.translationviewdraghelper.sample.AllowsForDragFrameLayout>
