--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.commit451.translationviewdraghelper.sample.AllowsForDragFrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.commit451.translationviewdraghelper.sample.DragFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,6 +8,8 @@
         android:id="@+id/box"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="#ff0000" />
+        android:background="#ff0000"
+        android:translationX="100dp"
+        android:translationY="200dp" />
 
-</com.commit451.translationviewdraghelper.sample.AllowsForDragFrameLayout>
+</com.commit451.translationviewdraghelper.sample.DragFrameLayout>
